# cattown

./: .gitignore  LICENSE  README.md  schema.proto
pi_controller/: README.md  pyproject.toml  requirements.txt  schema.proto  test_socket.py  test_toolhead.py
pi_controller/cattown/: .cookiecutter.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  noxfile.py  pyproject.toml
pi_controller/cattown/core/: exceptions.py  types.py
pi_controller/cattown/docs/: conf.py  index.md  reference.md  usage.md
pi_controller/cattown/hardware/: __init__.py  hardware.py
pi_controller/cattown/personalities/: base.py
pi_controller/cattown/platform_mgr/: manager.py
pi_controller/cattown/tests/: __init__.py  test_main.py
pi_controller/cattown/vision/: __init__.py  vision.py
pi_controller/ccv/: test_rpi_algo.py
pi_controller/cv/: test_framebuf_video.py  test_rpi_algo.py
pi_controller/cv/notebooks/: 2024-03-23-video-test.ipynb
pi_controller/cv_test_scripts/: test_rpi_algo.py
pi_controller/ipc/: README.md
pi_controller/pi-controller/: ccv.py  custommap.py  pathplanner.py
pi_controller/pi_controller/: README  README.md  ccv.py  constants.py  custommap.py  gcodes.py  infinite_loop.py  klipper.py  manual_control.py  map.csv  map_display.py  mice.py  motion.py  path.py  path_finder.py  pathplanner.py  printer.py  toolhead_trajectory.py
pi_controller/pi_controller/autonomy/: __main__.py  backend.py  frontend.py  mouse.py
pi_controller/pi_controller/motion/: commands.py  driver.py  gcodes.py  klipper.py  mock_driver.py  moonraker.py  styles.py  (+3 more)
(+78 files in other folders)
