[tool.poetry]
name = "pi-controller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "4.9.0.80"
numpy = "1.26.4"
matplotlib = "^3.9.0"
websockets = "^12.0"

colorlog = "^6.8.2"
nicegui = "^2.4.0"
[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-map-display = "pi_controller.map_display:main"
